# reconcile-ops

./: .env.example  .gitignore  Makefile  POSTMORTEM.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: generate.py
sql/: 01_load.sql  02_reconcile.sql  03_kpis.sql
src/reconcile_ops/: __init__.py  break_detector.py  cli.py  config.py  kpis.py  reconciler.py
tests/: test_break_detector.py  test_kpis.py  test_reconciler.py
